[tool.poetry]
name = "usa_spending"
version = "0.1.0"
description = ""
authors = ["csmizzle <chrissmith700@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
pyarrow = "^6.0.1"
fastparquet = "^0.7.2"
jupyter = "^1.0.0"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
rapidfuzz = "^1.9.1"
jellyfish = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
